Fix the box spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-color: #dbd6cf;
-  font-family: "Bevan", sans-serif;
+  font-family: sans-serif;
   line-height: 1.5;
 }
 
@@ -16,5 +16,29 @@ body {
   background-color: #79756f;
   text-align: center;
   border: 3px solid #595652;
+  color: #fff;
+}
+
+h1 {
+  font-family: Bevan, cursive;
+}
+
+a {
+  display: inline-block;
+  padding: .6em .5em .75em;
+  margin: .3em;
+  background-color: #713837;
+  text-align: center;
+  color: #fff;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+a:hover {
+  background-color: #f33;
   color: #fff;
 }
